[package]
name = "cretrit"
description = "Flexible Order-Revealing Encryption library"
license = "MIT"
homepage = "https://enquo.org"
repository = "https://github.com/enquo/cretrit"
keywords = ["encryption", "search", "query", "ore"]
categories = ["algorithms", "cryptography"]
exclude = ["/.git*", "Cargo.toml.orig"]
version = "0.0.0-git"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
aes = { version = "0.8" }
cmac = "0.7"
num = "0.3"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", optional = true }
serde_bytes = { version = "0.11", optional = true }
thiserror = "1.0"
zeroize = { version = "1.0", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.4"
hex-literal = "0.3"
quickcheck = "1.0"
serde_json = "1.0"

[profile.bench]
debug = true

[[bench]]
name = "cretrit"
harness = false
