[package]
name = "cretrit"
description = "Flexible Order-Revealing Encryption library"
license = "MIT"
homepage = "https://enquo.org"
repository = "https://github.com/enquo/cretrit"
keywords = ["encryption", "search", "query", "ore"]
categories = ["algorithms", "cryptography"]
exclude = ["/.git*", "Cargo.toml.orig"]
version = "0.0.0-git"
edition = "2021"
rust-version = "1.74.0"

[features]
serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
aes = { version = "0.8" }
cmac = "0.7"
num = "0.3"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", optional = true }
serde_bytes = { version = "0.11", optional = true }
thiserror = "1.0"
zeroize = { version = "1.0", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.4"
hex-literal = "0.3"
quickcheck = "1.0"
serde_json = "1.0"

[profile.bench]
debug = true

[[bench]]
name = "cretrit"
harness = false

[lints.rust]
dead_code = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = "warn"
alloc_instead_of_core = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cargo = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
expect_used = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
integer_division = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
non_ascii_literal = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pedantic = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "warn"
use_debug = "warn"
wildcard_enum_match_arm = "warn"
